# Test_task

./: .gitattributes  .gitignore  CMakeLists.txt  conanfile.py
lib/: CircularBuffer.hpp
src/: CircularBuffer.hpp  main.cpp
tests/: CMakeLists.txt  test_buffer.cpp
tests/demo/: demo.cpp
